Fix footer links & responsive alignment.

--- a/assets/stylesheets/_site_footer.scss
+++ b/assets/stylesheets/_site_footer.scss
@@ -15,6 +15,18 @@
 
 .site-footer a { color: #ddd; }
 
+.site-map li a {
+    @media (max-width: 600px) {
+        padding-left: 1em;
+    }
+}
+
+.site-map ul li {
+    @media (min-width: 600px) {
+        text-align: center;
+    }
+}
+
 // .footer-heading {
 //     font-size: 18px;
 //     margin-bottom: $spacing-unit / 2;
